# short_url_app

./: README.md  pyproject.toml
Backend/.github/workflows/: deploy.yml
Backend/Backend/: settings.py  urls.py
Backend/app1/: admin.py  forms.py  models.py  urls.py  views.py
Backend/app1/migrations/: 0001_initial.py  0002_record.py  0003_shorturl_delete_record.py
Backend/app1/static/app1/css/: base.css  home.css  login.css  signup.css
Backend/templates/: base.html  home.html  login.html  signup.html
Backend/templates/shorts/: create.html  delete.html  edit.html  list.html  regenerate.html  stats.html
